prepare fixture first step

--- a/composer.json
+++ b/composer.json
@@ -62,6 +62,12 @@
         "symfony/polyfill-php56": "*"
     },
     "scripts": {
+        "fixtures": [
+            "php bin/console d:d:d --if-exists -n --force",
+            "php bin/console d:d:c",
+            "php bin/console d:s:u -f",
+            "php bin/console d:f:l -n"
+        ],
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
             "assets:install %PUBLIC_DIR%": "symfony-cmd"
