--- a/config/services.yaml
+++ b/config/services.yaml
@@ -7,13 +7,14 @@ parameters:
     upload_dir: 'uploads/'
     upload_dir_relative_path: '%upload_dir%'
     upload_dir_absolute_path: '%kernel.project_dir%/public/%upload_dir%'
-    
+
 services:
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
-
+        bind:
+            $uploadDirAbsolutePath: '%upload_dir_absolute_path%'
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
