--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,11 +1,16 @@
 security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        in_memory:
-            memory:
-                users:
-                    user:  { password: userpass, roles: [ 'ROLE_USER' ] }
-                    admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
+        our_db_provider:
+            entity:
+                class: App\Entity\User
+                property: username
+                  # if you're using multip
+        #in_memory:
+            #memory:
+                #users:
+                    #user:  { password: userpass, roles: [ 'ROLE_USER' ] }
+                    #admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -34,4 +39,4 @@ security:
 
     # A CHANGER
     encoders:
-        Symfony\Component\Security\Core\User\User: plaintext
+        App\Entity\User: auto
